--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "license": "ISC",
     "dependencies": {
         "@babel/runtime": "^7.10.1",
+        "@material-ui/core": "^4.11.3",
         "babel-plugin-auto-import": "^1.0.5",
         "eslint-config-standard-jsx": "^8.1.0",
         "loglevel": "^1.6.8",
+        "material-table": "^1.69.2",
         "parcel": "^1.12.4",
         "parcel-plugin-less-js-enabled": "^1.0.2",
         "postcss-modules": "^2.0.0",
